--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "jsonwebtoken": "^8.5.1",
+    "primeicons": "^4.1.0",
+    "primereact": "^6.0.2",
     "react": "^17.0.1",
     "react-activity": "^1.2.2",
     "react-dom": "^17.0.1",
