--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^3.1.2",
+    "socket.io-client": "^3.1.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
