--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "firebase": "^8.3.1",
     "jsonwebtoken": "^8.5.1",
     "primeicons": "^4.1.0",
     "primereact": "^6.0.2",
     "react": "^17.0.1",
     "react-activity": "^1.2.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-google-places-autocomplete": "^3.2.1",
     "react-redux": "^7.2.2",
