--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-activity": "^1.2.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.2",
+    "react-file-viewer": "^1.2.1",
     "react-google-places-autocomplete": "^3.2.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
