--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "homepage": "http://sheruta.ng/",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^27.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,6 +18,7 @@
     "react-activity": "^1.2.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.2",
     "react-google-places-autocomplete": "^3.2.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
@@ -29,6 +32,7 @@
     "redux-thunk": "^2.3.0",
     "socket.io": "^3.1.2",
     "socket.io-client": "^3.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
