--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.2",
     "react-google-places-autocomplete": "^3.2.1",
+    "react-paystack": "^3.0.3",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
