--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.2",
     "react-google-places-autocomplete": "^3.2.1",
+    "react-hook-form": "^7.2.3",
     "react-paystack": "^3.0.3",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.1.0",
+    "react-toast-notifications": "^2.4.3",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
